--- a/translations/en.json
+++ b/translations/en.json
@@ -1,6 +1,10 @@
 {
   "app": {
     "package": "app_name",
+    "parameters" : {
+      "sender" : { "label": "Sender group ID", "helpText": "Group ID that will be allowed to send broadcast messages."},
+      "tag" : {"label" : "Tag", "helpText" : "Tag that tickets to be shown in the app will have."}
+    },
     "description": {
       "value": "Play the famous zen tunes in your help desk.",
       "title": "app description"
@@ -51,4 +55,5 @@
     "value": "Groups",
     "title": "user groups"
   }
+
 }
